[package]
name = "bundler"
version = "0.1.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Iselk/bundler"
readme = "README.md"
homepage = "https://icelk.dev/bundler/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
